[package]
name = "sshe"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = [
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "1.0.6"
