[package]
name = "sshe"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "sshe"
path = "src/bin/sshe.rs"

[[bin]]
name = "sshed"
path = "src/bin/sshed.rs"


[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
mimalloc = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.0", features = [
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "1.1.2"
